# OPENENV

./: .env.example  .gitignore  Dockerfile  README.md  app.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
environment/: __init__.py  env.py  graders.py  models.py  tasks.py
server/: app.py
static/: index.html
