[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sre-incident-response-env"
version = "1.0.0"
description = "A real-world OpenEnv environment for SRE incident response triage"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.2",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.11.7",
    "openai>=1.12.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*", "server*"]
